--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,7 @@
             </section>
             <section id="events">
                 {% for event in events %}
-                    <article class="event-card" data-article="{{ event[0] }}">
+                    <article class="event-card" data-article="{{ links[loop.index0] }}">
                         <img src="{{ url_for('static', 
                         filename=event[3].replace('app\\static\\', '').replace('\\', '/')) }}" 
                         alt="{{ event[1] }}">
