pages of the events have the right data (PostgreSQL)

--- a/app/templates/events/event.html
+++ b/app/templates/events/event.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ event.title }}</title>
+    <title>{{ event[0][1] }}</title>
     <link rel="icon" href="../static/images/logo.png"/>
     <link rel="stylesheet" href="../../static/css/event.css">
     <link rel="stylesheet" href="../../static/css/navigation.css">
@@ -38,18 +38,18 @@
                 <a href="/post_event">Post an event</a>
             </div>
         </div>
-        <h1>{{ event[1] }}</h1>
+        <h1>{{ event[0][1] }}</h1>
         <img src="{{ url_for('static', 
-        filename=event.image_filepath.replace('app\\static\\', '').replace('\\', '/')) }}" 
-        alt="{{ event[1] }}" class="event-image">
+        filename=event[0][3].replace('app\\static\\', '').replace('\\', '/')) }}" 
+        alt="{{ event[0][1] }}" class="event-image">
         <div class="event-details">
             <div class="date-location">
-                <span class="date"> {{ event[5] }} </span>
-                <span class="location"> {{ event[6] }} </span>
+                <span class="date"> {{ event[0][4] }} </span>
+                <span class="location"> {{ event[0][5] }} </span>
             </div>
             <h2>About the Event</h2>
             {% autoescape false %}
-            <p>{{ event[2] }}</p>
+            <p>{{ event[0][2] }}</p>
             {% endautoescape %}
             <!--<h3>Highlights:</h3>-->
             <!--<p>{{ event.call_to_action }}</p>-->
