--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -18,7 +18,6 @@ header{
     top: 0;
     background-color: #141414;
     color: #ababab;
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     height: auto;
     width: 100%;
     display: block;
@@ -102,7 +101,7 @@ body {
 body, h1, h2, p {
     margin: 0;
     padding: 0;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'TimesNew Roman', Times, serif;
 }
 
 main {
@@ -113,7 +112,7 @@ main {
 }
 
 .main_content {
-    border: solid 1px black;
+    border: solid 1px red;
     display: block;
     margin-left: 65px;
     padding: 0 60px; 
