Login works (for the most part)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -31,7 +31,7 @@
                 <img src="../static/images/create_event.png" alt="ftlp">
                 <p>Post</p>
             </a>
-            <a href="#" class="account">
+            <a href="/account" class="account">
                 <img src="../static/images/account.png" alt="ftlp">
                 <p>Account</p>
             </a>
