--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="auth-container">
         <h2>Login</h2>
-        <form id="loginForm">
+        <form id="loginForm", method="POST">
             <input type="email" id="email" name="email" placeholder="Email" required>
             <input type="password" id="password" name="password" placeholder="Password" required>
             <button type="submit">Login</button>
@@ -17,6 +17,6 @@
         <p id="message"></p>
         <p>Don't have an account? <a href="/register">Register here</a></p>
     </div>
-    <script src=""></script>
+    <script src="../static/js/login.js"></script>
 </body>
 </html>
