--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -33,7 +33,7 @@
                 <img src="../static/images/create_event.png" alt="ftlp">
                 <p>Post</p>
             </a>
-            <a href="#" class="sidebar_elem">
+            <a href="/account" class="sidebar_elem">
                 <img src="../static/images/account.png" alt="ftlp">
                 <p>Account</p>
             </a>
