--- a/app/static/css/account.css
+++ b/app/static/css/account.css
@@ -31,15 +31,15 @@ body {
     color: #666;
 }
 .btn {
-    background-color: #007bff;
-    color: #fff;
+    background-color: #ffd903;
+    color: #141414;
     border: none;
     padding: 10px 15px;
     border-radius: 4px;
     cursor: pointer;
 }
 .btn:hover {
-    background-color: #0056b3;
+    background-color: #ffd903;
 }
 .event-list {
     list-style-type: none;
@@ -58,4 +58,43 @@ body {
     margin: 5px 0;
     font-size: 0.9em;
     color: #666;
+}
+
+/* Modal styles */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 300px;
+    border-radius: 5px;
+    text-align: center;
+}
+.modal-buttons {
+    margin-top: 20px;
+}
+.modal-button {
+    padding: 10px 20px;
+    margin: 0 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+.confirm-button {
+    background-color: #4CAF50;
+    color: white;
+}
+.cancel-button {
+    background-color: #f44336;
+    color: white;
 }
