--- a/app/static/css/account.css
+++ b/app/static/css/account.css
@@ -6,30 +6,8 @@ body {
     margin: 0 auto;
     padding: 20px;
 }
-.card {
-    background-color: #fff;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-    margin-bottom: 20px;
-    padding: 20px;
-}
-.profile-header {
-    display: flex;
-    align-items: center;
-}
-.profile-avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    margin-right: 20px;
-}
-.profile-info h1 {
-    margin: 0;
-}
-.profile-info p {
-    margin: 5px 0;
-    color: #666;
-}
+
+/* Buttons styling */
 .btn {
     background-color: #ffd903;
     color: #141414;
@@ -41,23 +19,67 @@ body {
 .btn:hover {
     background-color: #ffd903;
 }
-.event-list {
-    list-style-type: none;
-    padding: 0;
+
+
+/* Events section styling */
+#events {
+    border: solid 0px red;
+    display: grid;
+    place-items: center;
+    grid-template-columns: repeat(4, minmax(200px, 1fr));
+    gap: 2%;
+    margin-top: 5%;
 }
-.event-item {
-    background-color: #f8f9fa;
-    border-radius: 4px;
-    padding: 15px;
-    margin-bottom: 10px;
+
+.event-card {
+    display: flex;
+    color: white;
+    flex-direction: column;
+    background-color: #141414;
+    padding: 0px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
-.event-item h3 {
-    margin: 0 0 10px 0;
+
+.event-card:hover {
+    background-color: #141414;
+    transform: translateY(-5px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
 }
-.event-item p {
-    margin: 5px 0;
-    font-size: 0.9em;
-    color: #666;
+
+.event-card img {
+    width: 100%;
+    height: 120px;  
+    object-fit: cover;  
+    border-radius: 8px 8px 0 0;
+    margin-bottom: 1.5%;  
+}
+
+.event-card h3 {
+    margin-top: 0%;
+    margin-bottom: 2%;
+    line-height: 90%;
+    font-size: 1.125rem;
+}
+
+.event-card p {
+    margin: 0;
+    padding: 0.1rem;
+    flex: 1;
+}
+
+.event-card .event-date {
+    padding: 0.0;
+    border-top: 1px solid #ababab;
+}
+
+.event-card .event-location {
+    padding: 0.0;
+    border-top: 1px solid #ddd;
 }
 
 /* Modal styles */
