Mobile version of sidebar is up

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,8 +13,8 @@
         <nav class="navbar">
             <div class="group_nav">
                 <div class="menu_activation">
-                    <img onclick="iconChanger(); menuOpener();" id="open" class="burger" src="../static/images/hamburger_menu.png" alt="ftlp">
-                    <img onclick="iconChanger(); menuOpener();" id="close" class="close" src="../static/images/close.png" alt="ftlp">
+                    <img onclick="iconChanger(); handleMenuToggle();" id="open" class="burger" src="../static/images/hamburger_menu.png" alt="ftlp">
+                    <img onclick="iconChanger(); handleMenuToggle();" id="close" class="close" src="../static/images/close.png" alt="ftlp">
                 </div>
                 <div class="logos">
                     <a href="/"><img class="logo_img" src="../static/images/logo.png" alt="error img"></a>
