--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -46,7 +46,8 @@
             <section class="hero">
                 <div class="hero-left">
                     <h2>Descoperă cele mai faine evenimente din Timișoara!</h2>
-                    <button class="cta-button">Găsește-mi un eveniment</button>
+                    <!--<button class="cta-button">Găsește-mi un eveniment</button>-->
+                    <button class="cta-button" id="myBtn">Explorează evenimentele</button>
                 </div>
                 <div class="hero-right">
                     <img src="../static/images/hero.jpg">
@@ -76,5 +77,6 @@
     </footer>
     <script src="../static/js/scripts.js"></script>
     <script src="../static/js/navbar.js"></script>
+    <script src="../static/js/scroll_down.js"></script>
 </body>
 </html>
