--- a/app/static/css/account.css
+++ b/app/static/css/account.css
@@ -1,10 +1,11 @@
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: #333;
+    color: white;
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
+    background-color: #141414;
 }
 
 /* Buttons styling */
@@ -17,7 +18,7 @@ body {
     cursor: pointer;
 }
 .btn:hover {
-    background-color: #ffd903;
+    background-color: #fff3ad;
 }
 
 
@@ -43,6 +44,15 @@ body {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+}
+
+.event-actions button{
+    background-color: #ffd903;
+    border: none;
+}
+
+.event-actions button:hover {
+    background-color: #fff3ad;
 }
 
 .event-card:hover {
