tie events to the user who posts them + git ignores image uploads

--- a/app/static/css/post_event.css
+++ b/app/static/css/post_event.css
@@ -2,7 +2,7 @@
     --primary-color: #ffd903;
     --secondary-color: #3F3D56;
     --accent-color: #F50057;
-    --background-color: #F0F0F0;
+    --background-color: #141414;
     --text-color: #333;
 }
 
