--- a/app/static/css/account.css
+++ b/app/static/css/account.css
@@ -105,6 +105,7 @@ body {
 }
 .modal-content {
     background-color: #fefefe;
+    background: #141414;
     margin: 15% auto;
     padding: 20px;
     border: 1px solid #888;
