Created contact page

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -113,35 +113,13 @@ main {
     margin: 0 0;
     flex: 1;
     display: flex;
+    margin-bottom: 2.5rem;
 }
 
 .main_content {
     display: block;
     margin-left: 65px;
     padding: 0 60px; 
-}
-
-footer {
-    background-color: #141414;
-    color: #ababab;
-    padding: 1rem 0;
-    text-align: center;
-    margin-top: 2rem;
-    bottom: 0;
-    height: 2.5rem;
-}
-
-footer nav {
-    color: #ababab;
-    background-color: #141414;
-}
-
-footer nav a:visited{
-    color: #ababab;
-}
-
-footer nav a{
-    text-decoration: none;
 }
 
 /* we use # for ids apparently */
