--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../static/images/logo.png"/>
     <link rel="stylesheet" href="../static/css/index.css">
     <link rel="stylesheet" href="../static/css/navigation.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
 </head>
 <body id="body">
     <header>
@@ -37,7 +38,7 @@
                 <img src="../static/images/account.png" alt="ftlp">
                 <p>Account</p>
             </a>
-            <a href="#" class="sidebar_elem">
+            <a href="/contact" class="sidebar_elem">
                 <img src="../static/images/phone.png" alt="ftlp">
                 <p>Contact</p>
             </a>
