--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <sidenav id="side__nav" class="side_nav">
-            <a href="#" class="sidebar_elem">
+            <a href="/" class="sidebar_elem">
                 <img src="../static/images/house2.png" alt="ftlp">
                 <p>Home</p>
             </a>
@@ -117,86 +117,6 @@
                             un alchimist celebru. Astfel <span style="color: yellow;">Profesorul Saladin</span> 
                             împreună cu <span style="color: yellow;">Don Quixote</span>
                             au creat această minunată platformă.
-                        </p>
-                    </div>
-                </div>
-                <div class="faq">
-                    <div class="question">
-                        <h3>Cum pot adăuga un eveniment ?</h3>
-
-                        <img src="../static/images/dropdown arrow.png" alt="ftli">
-                    </div>
-                    <div class="answer">
-                        <p>Pentru a adăuga un eveniment, tot ce trebuie să faci este să 
-                            apeși butonul de <span style="color: yellow;">Posteaza</span>
-                            din partea stângă a ecranului, mai exact din meniul de navigare
-                            în cazul în care ești pe telefon. De acolo procesul este
-                            foarte intuitiv :) 
-                        </p>
-                    </div>
-                </div>
-
-                <div class="faq">
-                    <div class="question">
-                        <h3>Cum pot să îmi creez un cont ?</h3>
-
-                        <img src="../static/images/dropdown arrow.png" alt="ftli">
-                    </div>
-                    <div class="answer">
-                        <p>Pentru a-ți crea un cont, va trebui să accesezi butonul
-                            <span style="color: yellow;">Cont</span> din meniul 
-                            de navigare, iar mai apoi să completezi tabelul cu niște date 
-                            pentru a finaliza procesul.
-                        </p>
-                    </div>
-                </div>
-
-                <div class="faq">
-                    <div class="question">
-                        <h3>Cine stă în spatele Eventer ?</h3>
-
-                        <img src="../static/images/dropdown arrow.png" alt="ftli">
-                    </div>
-                    <div class="answer">
-                        <p>Un tânăr fizician stătea o data într-un bar și se gândea
-                            ce să facă. Acesta a încercat să caute niște evenimente
-                            pe internet, însă nu a fost mulțumit de rezultatele căutării, 
-                            ele fiind foarte prost prezentate. Tânărul s-a gândit să
-                            ia această problemă în propriile mâini și să creeze o platformă
-                            unde oricine va avea acces la evenimente. În ajutorul lui a sărit
-                            un alchimist celebru. Astfel <span style="color: yellow;">Profesorul Saladin</span> 
-                            împreună cu <span style="color: yellow;">Don Quixote</span>
-                            au creat această minunată platformă.
-                        </p>
-                    </div>
-                </div>
-                <div class="faq">
-                    <div class="question">
-                        <h3>Cum pot adăuga un eveniment ?</h3>
-
-                        <img src="../static/images/dropdown arrow.png" alt="ftli">
-                    </div>
-                    <div class="answer">
-                        <p>Pentru a adăuga un eveniment, tot ce trebuie să faci este să 
-                            apeși butonul de <span style="color: yellow;">Posteaza</span>
-                            din partea stângă a ecranului, mai exact din meniul de navigare
-                            în cazul în care ești pe telefon. De acolo procesul este
-                            foarte intuitiv :) 
-                        </p>
-                    </div>
-                </div>
-
-                <div class="faq">
-                    <div class="question">
-                        <h3>Cum pot să îmi creez un cont ?</h3>
-
-                        <img src="../static/images/dropdown arrow.png" alt="ftli">
-                    </div>
-                    <div class="answer">
-                        <p>Pentru a-ți crea un cont, va trebui să accesezi butonul
-                            <span style="color: yellow;">Cont</span> din meniul 
-                            de navigare, iar mai apoi să completezi tabelul cu niște date 
-                            pentru a finaliza procesul.
                         </p>
                     </div>
                 </div>
