--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <sidenav id="side__nav" class="side_nav">
-            <a href="#" class="sidebar_elem">
+            <a href="/" class="sidebar_elem">
                 <img src="../static/images/house2.png" alt="ftlp">
                 <p>Home</p>
             </a>
