--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -26,17 +26,17 @@
     </header>
     <main>
         <sidenav id="side__nav" class="side_nav">
-            <a href="#" class="sidebar_elem">
+            <a href="/" class="sidebar_elem">
                 <img src="../static/images/house2.png" alt="ftlp">
-                <p>Home</p>
+                <p>Acasă</p>
             </a>
             <a href="/post_event" class="post_event sidebar_elem">
                 <img src="../static/images/create_event.png" alt="ftlp">
-                <p>Post</p>
+                <p>Postează</p>
             </a>
             <a href="/account" class="sidebar_elem">
                 <img src="../static/images/account.png" alt="ftlp">
-                <p>Account</p>
+                <p>Cont</p>
             </a>
             <a href="/contact" class="sidebar_elem">
                 <img src="../static/images/phone.png" alt="ftlp">
