--- a/app/static/css/navigation.css
+++ b/app/static/css/navigation.css
@@ -9,7 +9,7 @@
     align-items: center;
     width: 100%;
     height: 55px;
-    padding: 15px 0;
+    /* padding: 15px 0; */
     top: 0;
     position: sticky;
     z-index: 3;
