--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Account Page - Events Website</title>
+    <link rel="icon" href="../static/images/logo.png"/>
     <link rel="stylesheet" href="../static/css/account.css">
     <link rel="stylesheet" href="../static/css/navigation.css">
     <link rel="stylesheet" href="../static/css/footer.css">
