--- a/app/templates/events/event.html
+++ b/app/templates/events/event.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ event[0][1] }}</title>
-    <!--<link rel="icon" href="../static/images/logo.png"/>-->
+    <link rel="icon" href="../../static/images/logo.png"/>
     <link rel="stylesheet" href="../../static/css/event.css">
     <link rel="stylesheet" href="../../static/css/navigation.css">
 </head>
