--- a/app/static/css/event.css
+++ b/app/static/css/event.css
@@ -1,20 +1,49 @@
 body {
     font-family: 'Arial', sans-serif;
+    background-color: #141414;
+    color: #ababab;
     line-height: 1.6;
-    color: #141414;
-    max-width: 100%;
-    margin: 0 auto;
-    background-color: #f4f4f4;
-    
-}
-
-main {
-    padding: 2rem 1rem;
-    max-width: 1000px;
-    margin: 0 auto;
+    margin: 0;
     display: flex;
     flex-direction: column;
-    z-index: 55;
+    min-height: 100vh;
+}
+
+header{
+    position: -webkit-sticky; /* For Safari */
+    position: sticky;
+    z-index: 10;
+    top: 0;
+    background-color: #141414;
+    color: #ababab;
+    height: auto;
+    width: 100%;
+    display: block;
+    border: solid 1px brown;
+}
+
+/* main {
+    margin: 0 0;
+    flex: 1;
+    display: flex;
+    margin-bottom: 2.5rem;
+} */
+
+main {
+    margin: 0 0;
+    flex: 1;
+    display: flex;
+    margin-bottom: 2.5rem;
+}
+
+.main_content {
+    display: block;
+    margin-left: 65px;
+    padding: 0 60px; 
+}
+
+.all_event {
+    border: solid 1px yellow;
 }
 
 h1 {
@@ -26,24 +55,28 @@ h1 {
     object-fit: cover;
     border-radius: 5px;
 }
+
 .event-details {
     background-color: white;
     padding: 20px;
     border-radius: 0 0 5px 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
+
 .date-location {
     display: flex;
     justify-content: space-between;
     margin-bottom: 15px;
 }
+
 .date, .location {
     background-color: #ffd903;
     color: white;
     padding: 5px 10px;
     border-radius: 3px;
 }
-.cta-button {
+
+/* .cta-button {
     display: block;
     width: 200px;
     margin: 20px auto;
@@ -79,4 +112,4 @@ h1 {
     border-bottom: solid 1px #e0f7fa;
     padding: 0;
     margin: 20px 0;
-}
+} */
