--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -25,25 +25,74 @@ header{
 
 /* Hero section */
 .hero {
-    height: 25rem;
     display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: center;
-    border-radius: 10px;
-    padding: 35px 0;
-    margin-bottom: 30px;
-    margin-top: 30px;
+    justify-content: space-between;
+    padding: 35px 60px;
+    margin: 30px 0;
     background-color: #141414;
-    font-family: 'Poppins', sans-serif;
     overflow: hidden;
+    max-height: 40%;
+}
+
+.cta-button {
+    background-color: #ffd903;
+    color: #141414;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    text-decoration: none;
+    display: inline-block;
+}
+
+.cta-button:hover {
+    background-color: #e6c300;
 }
 
 .hero-right {
     flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    max-width: 65%;
+}
+
+.image-container {
+    position: relative;
+    overflow: hidden;
+    border-radius: 15px;
+    aspect-ratio: 1;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-container:nth-child(odd) {
+    transform: translateY(20px);
+}
+
+.image-container:nth-child(1) img {
+    object-position: 50% 70%;
+}
+
+.image-container:nth-child(2) img {
+    object-position: 5% 75%;
+}
+
+.image-container:nth-child(3) img {
+    object-position: 5% 150%;
+}
+
+.image-container:nth-child(4) img {
+    object-position: 5% 100%;
 }
 
 .hero-left {
@@ -54,6 +103,7 @@ header{
     align-items: flex-start;
     color: #ffd903;
     padding: 20px;
+    max-width: 35%;
 }
 
 .hero-left h2 {
@@ -98,9 +148,18 @@ body {
     color: #ababab;
     line-height: 1.6;
     margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    width: 100%;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    width: 100%;
+    margin-bottom: 2.5rem;
 }
 
 body, h1, h2, p {
@@ -109,17 +168,13 @@ body, h1, h2, p {
     font-family: 'TimesNew Roman', Times, serif;
 }
 
-main {
-    margin: 0 0;
-    flex: 1;
-    display: flex;
-    margin-bottom: 2.5rem;
-}
 
 .main_content {
     display: block;
-    margin-left: 65px;
-    padding: 0 60px; 
+    width: 100%;
+    margin: 0 auto; /* This centers the content */
+    padding: 0 20px; /* Adds some padding on smaller screens */
+    box-sizing: border-box; /* Includes padding in the width calculation */
 }
 
 /* we use # for ids apparently */
