--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -47,10 +47,23 @@
             <section class="hero" id="hero">
                 <div class="hero-left" id="hero__left">
                     <h2>Distribuie evenimente!</h2>
-                    <button class="cta-button" id="call__to__action__hero"><a href="#events">Găsește-mi un eveniment</a></button>
+                    <button class="cta-button" id="call__to__action__hero">
+                        <a href="#events">Găsește-mi un eveniment</a>
+                    </button>
                 </div>
                 <div class="hero-right" id="hero__right">
-                    <img src="../static/images/hero.jpg">
+                    <div class="image-container">
+                        <img src="../static/images/hero.jpg" alt="Event Image 1">
+                    </div>
+                    <div class="image-container">
+                        <img src="../static/images/hero2.jpg" alt="Event Image 2">
+                    </div>
+                    <div class="image-container">
+                        <img src="../static/images/hero3.jpg" alt="Event Image 3">
+                    </div>
+                    <div class="image-container">
+                        <img src="../static/images/hero4.jpg" alt="Event Image 4">
+                    </div>
                 </div>
             </section>
             <hr>
