--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../static/css/index.css">
     <link rel="stylesheet" href="../static/css/navigation.css">
     <link rel="stylesheet" href="../static/css/footer.css">
+    <link href="https://fonts.cdnfonts.com/css/gagalin" rel="stylesheet">
 </head>
 <body id="body">
     <header>
@@ -46,7 +47,7 @@
         <div id="content" class="main_content">
             <section class="hero" id="hero">
                 <div class="hero-left" id="hero__left">
-                    <h2>Distribuie evenimente!</h2>
+                    <h2>Clipele devin amintiri!</h2>
                     <button class="cta-button" id="call__to__action__hero">
                         <a href="#events">Găsește-mi un eveniment</a>
                     </button>
