--- a/app/static/css/event.css
+++ b/app/static/css/event.css
@@ -1,12 +1,22 @@
+@font-face {
+    font-family: 'GlacialIndifference_Bold';
+    src: url('../fonts/GlacialIndifference/GlacialIndifference-Bold.otf'); 
+}
+
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Arial', sans-serif;
     background-color: #141414;
     color: #ababab;
-    line-height: 1.6;
+    /* line-height: 1.6; */
     margin: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 200vh;
+    max-width: 100vw;
 }
 
 header{
@@ -17,17 +27,9 @@ header{
     background-color: #141414;
     color: #ababab;
     height: auto;
-    width: 100%;
+    max-width: 100%;
     display: block;
-    border: solid 1px brown;
 }
-
-/* main {
-    margin: 0 0;
-    flex: 1;
-    display: flex;
-    margin-bottom: 2.5rem;
-} */
 
 main {
     margin: 0 0;
@@ -39,25 +41,78 @@ main {
 .main_content {
     display: block;
     margin-left: 65px;
-    padding: 0 60px; 
+    padding: 0 100px;
 }
+
+/* Irelevant momentan
+
+.preview_of_event {
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    width: 100%;
+    height: 10rem;
+    background-color: #463443;
+    border-radius: 10px;
+    padding: 10px;
+    border: solid 1px palevioletred;
+}
+
+.preview_of_event img { 
+    max-width: 250px;
+    min-width: 50px;
+}
+
+.preview_of_event .texts {
+    display: flex;
+    flex-direction: column;
+}
+
+.preview_of_event .texts .ip_text {
+    display: flex;
+}
+
+.preview_of_event .texts .bottom_text {
+    display: flex;
+}
+*/
 
 .all_event {
-    border: solid 1px yellow;
+    display: flex;
+    flex-direction: column;
 }
 
-h1 {
-    margin: 0;
+.cover_image {
+    display: flex;
+    justify-content: center;
+    padding: 30px;
 }
+
 .event-image {
-    width: 100%;
-    height: 300px;
+    max-width: 80%;
+    max-height: 500px;
     object-fit: cover;
     border-radius: 5px;
 }
 
+.tile_and_link {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+    margin: 0;
+}
+
+.event_title {
+    font-family: GlacialIndifference;
+    margin: 0;
+    color: white;
+}
+
 .event-details {
-    background-color: white;
+    background-color: #141414;
+    color: rgba(255, 255, 255, 0.779);
     padding: 20px;
     border-radius: 0 0 5px 5px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -70,46 +125,59 @@ h1 {
 }
 
 .date, .location {
-    background-color: #ffd903;
-    color: white;
+    background-color: #e8dc36;
+    color: #141414;
     padding: 5px 10px;
     border-radius: 3px;
 }
 
-/* .cta-button {
-    display: block;
-    width: 200px;
-    margin: 20px auto;
-    padding: 10px;
-    background-color: #e74c3c;
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-    transition: background-color 0.3s ease;
-}
-.cta-button:hover {
-    background-color: #c0392b;
-}
+/* Mobile Version of the website */
+@media (max-width: 1000px) {
+    .main_content {
+        margin-left: 20px;
+        padding: 0;
+    }
 
+    .all_event {
+        /* display: flex;
+        flex-direction: column; */
+        width: 90vw;
+    }
 
-.hamburger_menu {
-    display: flex;
-    width: 45px;
-    cursor: pointer;
+    .cover_image {
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+    }
+
+    .event-image {
+        max-width: 80%;
+        max-height: 500px;
+        object-fit: cover;
+        border-radius: 5px;
+    }
+    
+    .date-location {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 15px;
+    }
+
+    .date, .location {
+        background-color: #e8dc36;
+        color: #141414;
+        padding: 5px 10px;
+        border-radius: 3px;
+        margin-top: 10px;   
+    }
+
+    .tile_and_link {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0;
+        margin: 0;
+    }
 }
-
-.x_button {
-    display: none;
-    width: 45px;
-    cursor: pointer;
-}
-
-.navigation_links {
-    display: block;
-    border-top: solid 1px #e0f7fa;
-    border-bottom: solid 1px #e0f7fa;
-    padding: 0;
-    margin: 20px 0;
-} */
