Feedback box (only frontend)

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -81,6 +81,13 @@
             </section>
         </div> 
     </main>
+    <div id="feedback-widget" class="feedback-closed">
+        <div id="feedback-toggle">Have feedback?</div>
+        <div id="feedback-form">
+          <textarea id="feedback-text" placeholder="Your feedback here..."></textarea>
+          <button id="feedback-submit">Submit</button>
+        </div>
+      </div>
     <footer>
         <nav>
         <p>&copy; 2024 Eventer. All rights reserved.</p>
