--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -287,7 +287,7 @@ body, h1, p {
   }
   
   #feedback-submit {
-    background-color: #4a90e2;
+    background-color:#141414;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -296,5 +296,5 @@ body, h1, p {
   }
   
   #feedback-submit:hover {
-    background-color: #357abd;
+    background-color: #14141489;
   }
